fixed font-sizing on mobile, added breakpoints for 500px, switched text alignment to left-justify for 500px view

--- a/css/index.css
+++ b/css/index.css
@@ -317,6 +317,9 @@ img {
 @media (max-width: 800px) {
   .hero .heroCopy {
     width: 100%;
+    border-bottom: 2px solid black;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 .hero .heroCopy h1 {
@@ -384,10 +387,24 @@ img {
   padding: 1% 0 0 0;
   font-size: 2.5rem;
 }
+@media (max-width: 800px) {
+  .intro-container h2 {
+    margin-bottom: 5%;
+  }
+}
+@media (max-width: 500px) {
+  .intro-container h2 {
+    margin-bottom: 5%;
+  }
+}
 .intro-container p {
   max-width: 80%;
   padding: 2% 2% 0% 2%;
-  font-weight: bold;
+}
+@media (max-width: 500px) {
+  .intro-container p {
+    text-align: left;
+  }
 }
 .user-roles-container {
   display: flex;
@@ -537,6 +554,11 @@ img {
     font-size: 3rem;
   }
 }
+@media (max-width: 500px) {
+  .features-container .features-col-1 h2 {
+    font-size: 2.5rem;
+  }
+}
 .features-container .features-col-1 p {
   font-size: 1.15vw;
   margin-bottom: 3%;
@@ -544,8 +566,14 @@ img {
 }
 @media (max-width: 800px) {
   .features-container .features-col-1 p {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .features-container .features-col-1 p {
     font-size: 1.5rem;
-    font-weight: bold;
+    text-align: left;
+    padding: 0 2% 0 4%;
   }
 }
 .features-container .features-col-1 a {
@@ -565,7 +593,13 @@ img {
 @media (max-width: 800px) {
   .features-container .features-col-1 a {
     width: 25%;
-    font-size: 1.2rem;
+    font-size: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .features-container .features-col-1 a {
+    width: 33%;
+    font-size: 1.5rem;
   }
 }
 .features-container .features-col-2 {
@@ -606,8 +640,20 @@ img {
 }
 @media (max-width: 800px) {
   .features-container .features-col-2 h3 {
-    font-size: 1.5rem;
+    font-size: 2.25rem;
     margin-bottom: 5%;
+  }
+}
+@media (max-width: 800px) {
+  .features-container .features-col-2 p {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .features-container .features-col-2 p {
+    font-size: 1.5rem;
+    text-align: left;
+    padding: 0 2% 0 4%;
   }
 }
 .features-container .features-col-2 img {
@@ -618,6 +664,7 @@ img {
   border-bottom: 2px solid black;
   margin-top: 0;
   margin-bottom: 0;
+  border-top: 2px solid black;
 }
 .staff {
   background-color: rgba(58, 181, 229, 0.2);
@@ -653,12 +700,17 @@ img {
 .final-cta-container p {
   max-width: 80%;
   padding: 3% 2% 2% 2%;
-  font-weight: bold;
   font-size: 1.25vw;
 }
 @media (max-width: 800px) {
   .final-cta-container p {
     font-size: 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .final-cta-container p {
+    text-align: center;
+    padding: 3% 2% 3% 4%;
   }
 }
 .final-cta-container a {
